--- a/Week 2.ipynb
+++ b/Week 2.ipynb
@@ -3657,7 +3657,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "KX4eowVm7bfM"
       },
@@ -3702,7 +3702,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -3741,7 +3741,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "8OXfsJjIqzzc"
       },
@@ -3771,7 +3771,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 103,
+      "execution_count": null,
       "metadata": {
         "id": "CtmiTQxnqzzd"
       },
@@ -3816,7 +3816,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 105,
+      "execution_count": null,
       "metadata": {
         "id": "D_iNq5Mcqzzd",
         "outputId": "1320bab4-2e65-4bad-b265-53b3a828fd58",
@@ -3849,7 +3849,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 106,
+      "execution_count": null,
       "metadata": {
         "id": "su-zB3ywqzzd",
         "outputId": "9a657334-d4b3-46e0-b6da-ab5b825f5f3e",
@@ -3965,7 +3965,7 @@
         "plt.show()\n",
         "\n",
         "\n",
-        "\n",
+        "#Note for later, but is this data correct? It doesnt really line up with the first graph (which represents the general view of the data, neutral should be lower than the other ones and im very doubtful that they are equal.)\n",
         "\n",
         "\n",
         "\n",
