--- a/Week 2.ipynb
+++ b/Week 2.ipynb
@@ -3174,14 +3174,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 142,
+      "execution_count": 163,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 75
         },
         "id": "-3gEFP6Q7qQD",
-        "outputId": "8a5184c9-5e37-4c7c-ed33-08b3575bbe8b"
+        "outputId": "89e4ea60-2bdc-419e-d682-c52c14fef2bb"
       },
       "outputs": [
         {
@@ -3200,11 +3200,11 @@
             ]
           },
           "metadata": {},
-          "execution_count": 142
+          "execution_count": 163
         }
       ],
       "source": [
-        "audio_files = glob('Audio Data/*/*.wav')\n",
+        "audio_files = glob.glob('Audio Data/*/*.wav')\n",
         "\n",
         "\n",
         "#Playing an audio file using IPython.display\n",
@@ -3213,7 +3213,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 143,
+      "execution_count": 164,
       "metadata": {
         "id": "8OXfsJjIqzzc"
       },
@@ -3243,7 +3243,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 144,
+      "execution_count": 165,
       "metadata": {
         "id": "CtmiTQxnqzzd"
       },
@@ -3279,13 +3279,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 145,
+      "execution_count": 166,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "D_iNq5Mcqzzd",
-        "outputId": "05135f79-d383-4f53-ee80-80fc812cb1f0"
+        "outputId": "787d2c00-264c-4581-f7d2-8a81d614ac4a"
       },
       "outputs": [
         {
@@ -3306,13 +3306,13 @@
         "features, emotions"
       ],
       "metadata": {
-        "id": "6EkB_XbIjCEY",
-        "outputId": "fc0d106e-74f1-4bae-e698-b88d8841ad03",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6EkB_XbIjCEY",
+        "outputId": "45217c83-814b-4d60-d62b-ed5f824a2232"
       },
-      "execution_count": 146,
+      "execution_count": 167,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3324,7 +3324,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 146
+          "execution_count": 167
         }
       ]
     },
@@ -3339,14 +3339,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 147,
+      "execution_count": 168,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 398
         },
         "id": "su-zB3ywqzzd",
-        "outputId": "b053d1d7-2740-4939-a5e8-f7c920ef71f3"
+        "outputId": "7b901ac6-9dbe-4658-9ece-4ef28b0e4fe4"
       },
       "outputs": [
         {
@@ -3372,6 +3372,32 @@
         "plt.tick_params(labelsize=16)\n",
         "plt.ylabel('Number of Samples')\n",
         "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "count"
+      ],
+      "metadata": {
+        "id": "jBmRkX23m9fg",
+        "outputId": "8a140d5c-fe1d-4efc-91a6-b7cf91042eb4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 169,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([193, 193, 193, 193, 193,  97, 193, 192])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 169
+        }
       ]
     },
     {
