--- a/Week 2.ipynb
+++ b/Week 2.ipynb
@@ -3266,10 +3266,10 @@
         "\n",
         "        gender_number = int(file_name.split(\"-\")[6].replace('.wav', ''))\n",
         "\n",
-        "        if gender_number % 2 == 0:  # Even -> Female\n",
+        "        if gender_number % 2 == 0:\n",
         "            female_count += 1\n",
         "            gender_list.append('Female')\n",
-        "        else:  # Odd -> Male\n",
+        "        else:\n",
         "            male_count += 1\n",
         "            gender_list.append('Male')\n",
         "\n",
@@ -3389,10 +3389,10 @@
         "plt.tick_params(labelsize=16)\n",
         "plt.ylabel('Number of Samples')\n",
         "\n",
-        "# Plot gender distribution\n",
+        "# Plot gender\n",
         "plt.subplot(1, 2, 2)\n",
         "gender_list, gender_count = np.unique(genders, return_counts=True)\n",
-        "plt.bar(x=[0, 1], height=gender_count, color=['#FF69B4', '#1E90FF'])  # Pink for female, blue for male\n",
+        "plt.bar(x=[0, 1], height=gender_count, color=['#FF69B4', '#1E90FF'])\n",
         "plt.xticks(ticks=[0, 1], labels=['Female', 'Male'], fontsize=14)\n",
         "plt.xlabel('Gender', fontsize=14)\n",
         "plt.ylabel('Number of Samples', fontsize=14)\n",
@@ -3408,11 +3408,11 @@
         "gender_count"
       ],
       "metadata": {
-        "id": "lwjQjZVAEhYj",
-        "outputId": "d4e71002-031a-4951-e6e8-0eba19eb5e19",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "lwjQjZVAEhYj",
+        "outputId": "d4e71002-031a-4951-e6e8-0eba19eb5e19"
       },
       "execution_count": 71,
       "outputs": [
