Gender: 13 Male, 12 Females

--- a/Week_2.ipynb
+++ b/Week_2.ipynb
@@ -3366,6 +3366,44 @@
         "\n",
         "We will continue working on this dataset in the upcoming weeks, so save your work!"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 52,
+      "metadata": {
+        "id": "iPupxbLimI_j"
+      },
+      "outputs": [],
+      "source": [
+        "#gender in the RAVDESS dataset\n",
+        "genders_ravdess ={\n",
+        "  '01':'male',\n",
+        "  '02':'female',\n",
+        "  '03':'male',\n",
+        "  '04':'female',\n",
+        "  '05':'male',\n",
+        "  '06':'female',\n",
+        "  '07':'male',\n",
+        "  '08':'female',\n",
+        "  '09':'male',\n",
+        "  '10':'female',\n",
+        "  '11':'male',\n",
+        "  '12':'female',\n",
+        "  '13':'male',\n",
+        "  '14':'female',\n",
+        "  '15':'male',\n",
+        "  '16':'female',\n",
+        "  '17':'male',\n",
+        "  '18':'female',\n",
+        "  '19':'male',\n",
+        "  '20':'female',\n",
+        "  '21':'male',\n",
+        "  '22':'female',\n",
+        "  '23':'male',\n",
+        "  '24':'female',\n",
+        "  '25':'male'\n",
+        "}"
+      ]
     }
   ],
   "metadata": {
